--- a/notebooks/model_training.ipynb
+++ b/notebooks/model_training.ipynb
@@ -219,7 +219,7 @@
    "outputs": [],
    "source": [
     "# Feature selection\n",
-    "X = data.drop(['Item_Identifier', 'Outlet_Establishment_Year', 'Item_Outlet_Sales'], axis=1)\n",
+    "X = data.drop([                                                                                                                                                                                                                                                                                                                                                                                                                       , 'Item_Outlet_Sales'], axis=1)\n",
     "y = data['Item_Outlet_Sales']"
    ]
   },
