--- a/notebooks/model_training.ipynb
+++ b/notebooks/model_training.ipynb
@@ -860,7 +860,16 @@
     "    \"Ridge\": Ridge(),\n",
     "    \"K-Neighbors Regressor\": KNeighborsRegressor(),\n",
     "    \"Decision Tree\": DecisionTreeRegressor(),\n",
-    "    \"Random Forest Regressor\": RandomForestRegressor(n_estimators=100,  criterion='squared_error', max_depth=5, min_samples_split=5, min_samples_leaf=3, min_weight_fraction_leaf=0.0, max_features=1.0, max_leaf_nodes=None, oob_score=False, n_jobs=None, random_state=None),\n",
+    "    \"Random Forest Regressor\": RandomForestRegressor(n_estimators=100, \n",
+    "                                                      criterion='squared_error', \n",
+    "                                                      max_depth=5, min_samples_split=5,\n",
+    "                                                        min_samples_leaf=3, \n",
+    "                                                        min_weight_fraction_leaf=0.0, \n",
+    "                                                        max_features=1.0, \n",
+    "                                                        max_leaf_nodes=None, \n",
+    "                                                        oob_score=False, \n",
+    "                                                        n_jobs=None, \n",
+    "                                                        random_state=None),\n",
     "    \"XGBRegressor\": XGBRegressor(), \n",
     "    \"CatBoosting Regressor\": CatBoostRegressor(verbose=False),\n",
     "    \"AdaBoost Regressor\": AdaBoostRegressor()\n",
