--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -591,7 +591,6 @@
     "import pandas as pd\n",
     "from datetime import datetime\n",
     "\n",
-    "# Assuming data is your DataFrame with the given dataset\n",
     "# Convert \"Outlet_Establishment_Year\" to datetime\n",
     "data['Outlet_Establishment_Year'] = pd.to_datetime(data['Outlet_Establishment_Year'], format='%Y')\n",
     "\n",
@@ -989,6 +988,7 @@
     }
    ],
    "source": [
+    "#heatmap\n",
     "import seaborn as sns\n",
     "sns.heatmap(data[numerical_columns].corr(),annot=True)"
    ]
@@ -1417,6 +1417,7 @@
     }
    ],
    "source": [
+    "#pair plot\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "sns.pairplot(data, vars=['Item_Weight', 'Item_Visibility', 'Item_MRP', 'Item_Outlet_Sales'])\n",
